--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -35,16 +35,16 @@ jobs:
           mv raylib-5.5_linux_amd64/* lib/raylib/
 
       - name: Configure CMake
-        run: cmake -B build -S .
+        run: cmake -B build/ -S .
 
       - name: Build
-        run: cmake --build build
+        run: cmake --build build/
 
       - name: Prepare release files
         run: |
           mkdir release
-          cp -r build/Aloha/* release/ || true
-          cp -r romfs $WORKSPACE/release/ || true
+          cp -r build/Aloha* release/ || true
+          cp -r romfs/ release/ || true
           ls -R release/
 
       - name: Compress release files
@@ -93,27 +93,28 @@ jobs:
           mkdir -p lib/raylib/
           curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_win64_mingw-w64.zip -o raylib.zip
           unzip -q raylib.zip
-          mv raylib-5.5_win64_mingw-w64/* $WORKSPACE/lib/raylib/
+          mv raylib-5.5_win64_mingw-w64/* lib/raylib/
           ls -R lib/raylib/
 
       - name: Configure CMake
         shell: msys2 {0}
         run: |
           cd $WORKSPACE
-          cmake -B build -G Ninja -S .
+          cmake -B build/ -G Ninja -S .
 
       - name: Build
         shell: msys2 {0}
         run: |
           cd $WORKSPACE
-          cmake --build build
+          cmake --build build/
+          ls -R build/
 
       - name: Prepare release files
         shell: msys2 {0}
         run: |
           cd $WORKSPACE
-          mkdir release
-          cp -r build/Aloha/* $WORKSPACE/release/ || true
+          mkdir release/
+          cp -r build/Aloha* $WORKSPACE/release/ || true
           cp -r lib/raylib/lib/raylib.dll release/ || true
           cp -r romfs/ release/ || true
           ls -R release/
