--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -80,16 +80,9 @@ jobs:
             cmake:p
             ninja:p
 
-      - name: Set reusable strings
-        shell: msys2 {0}
-        run: |
-          echo "WORKSPACE=$(cygpath -u "${{ github.workspace }}")" >> $GITHUB_ENV
-      #     echo "BUILD_OUTPUT_DIR=$WORKSPACE/build" >> $GITHUB_ENV
-
       - name: Prepare Raylib (Windows)
         shell: msys2 {0}
         run: |
-          cd $WORKSPACE
           mkdir -p lib/raylib/
           curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_win64_mingw-w64.zip -o raylib.zip
           unzip -q raylib.zip
@@ -99,22 +92,19 @@ jobs:
       - name: Configure CMake
         shell: msys2 {0}
         run: |
-          cd $WORKSPACE
           cmake -B build/ -G Ninja -S .
 
       - name: Build
         shell: msys2 {0}
         run: |
-          cd $WORKSPACE
           cmake --build build/
           ls -R build/
 
       - name: Prepare release files
         shell: msys2 {0}
         run: |
-          cd $WORKSPACE
           mkdir release/
-          cp -r build/Aloha* $WORKSPACE/release/ || true
+          cp -r build/Aloha* release/ || true
           cp -r lib/raylib/lib/raylib.dll release/ || true
           cp -r romfs/ release/ || true
           ls -R release/
@@ -122,8 +112,7 @@ jobs:
       - name: Compress release files
         shell: msys2 {0}
         run: |
-          cd $WORKSPACE
-          zip -r Aloha-Windows.zip release/
+          zip -r Aloha-Windows-mingw64.zip release/
 
       - uses: actions/upload-artifact@v4
         with:
