--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -35,17 +35,16 @@ jobs:
           mv raylib-5.5_linux_amd64/* lib/raylib/
 
       - name: Configure CMake
-        run: cmake -B build/ -S .
+        run: cmake -B build/ -G Ninja -S . -DCMAKE_BUILD_TYPE=Release
 
       - name: Build
-        run: cmake --build build/
+        run: cmake --build build/ -j
 
       - name: Prepare release files
         run: |
           mkdir release
           cp -r build/Aloha* release/ || true
           cp -r romfs/ release/ || true
-          ls -R release/
 
       - name: Compress release files
         run: tar -czf Aloha-Linux_${{ matrix.compiler }}.tar.gz release/
@@ -87,18 +86,14 @@ jobs:
           curl -L https://github.com/raysan5/raylib/releases/download/5.5/raylib-5.5_win64_mingw-w64.zip -o raylib.zip
           unzip -q raylib.zip
           mv raylib-5.5_win64_mingw-w64/* lib/raylib/
-          ls -R lib/raylib/
 
       - name: Configure CMake
         shell: msys2 {0}
-        run: |
-          cmake -B build/ -G Ninja -S .
+        run: cmake -B build/ -G Ninja -S . -DCMAKE_BUILD_TYPE=Release
 
       - name: Build
         shell: msys2 {0}
-        run: |
-          cmake --build build/
-          ls -R build/
+        run: cmake --build build/ -j
 
       - name: Prepare release files
         shell: msys2 {0}
@@ -107,12 +102,10 @@ jobs:
           cp -r build/Aloha* release/ || true
           cp -r lib/raylib/lib/raylib.dll release/ || true
           cp -r romfs/ release/ || true
-          ls -R release/
 
       - name: Compress release files
         shell: msys2 {0}
-        run: |
-          zip -r Aloha-Windows-mingw64.zip release/
+        run: zip -r Aloha-Windows-mingw64.zip release/
 
       - uses: actions/upload-artifact@v4
         with:
